Fixing nav, social color hovers, nav font changes on mobile

--- a/components/footer.module.scss
+++ b/components/footer.module.scss
@@ -84,9 +84,9 @@
                         }
                     }
 
-                    a:hover {
+                    /*                     a:hover {
                         color: variables.$altColor;
-                    }
+                    } */
                 }
 
                 .phone {
